fixed spacing issue on tutorial tab

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -232,15 +232,25 @@ footer small a {
 
   margin-top: 30px;
 }
-.tutorial-videos p {
-  padding-top: 10%;
+.tutorials-videos .row {
+  padding: 20px 0;
 }
 .video-box:after {
-  /* padding-bottom: 20px; */
   display: block;
   height: 4px;
   background-color: #568892;
   content: " ";
   margin-left: 25%;
   width: 50%;
+  z-index: 20;
+}
+.clearfix {
+  zoom: 1;
+}
+.clearfix:after {
+  content: ".";
+  clear: both;
+  display: block;
+  height: 0;
+  visibility: hidden;
 }
